--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <meta name="apple-mobile-web-app-title" content="Kaiser, Kühe und Kultur – Ein Parcours durch die Arenenberger Vielfalt" />
 <link rel="manifest" href="/site.webmanifest" />
 </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<body class="antialiased font-gt-alpina-medium text-md leading-[1.2] text-evergreen bg-blush max-w-lg mx-auto px-15">
+  <div id="app"></div>
+  <script type="module" src="/src/app.js"></script>
+</body>
 </html>
