--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="apple-mobile-web-app-title" content="Kaiser, Kühe und Kultur – Ein Parcours durch die Arenenberger Vielfalt" />
 </head>
 <body class="antialiased font-gt-alpina-medium text-md leading-[1.2] text-evergreen">
-  <div id="app" class="h-display w-display bg-blush"></div>
+  <div id="app" class="h-display w-display bg-blush relative"></div>
 </body>
 <script type="module" src="/src/js/app.js"></script>
 </html>
